k8s/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: ecommerce
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-services
  namespace: ecommerce
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - user-service
          - product-service
          - cart-service
          - order-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 50051
        - protocol: TCP
          port: 50053
        - protocol: TCP
          port: 50057
        - protocol: TCP
          port: 50055
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cart-order-to-user-product
  namespace: ecommerce
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - user-service
          - product-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cart-service
        - podSelector:
            matchLabels:
              app: order-service
      ports:
        - protocol: TCP
          port: 50051
        - protocol: TCP
          port: 50053
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-services-to-datastores
  namespace: ecommerce
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - user-db
          - product-db
          - order-db
          - cart-redis
          - product-redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - user-service
                  - product-service
                  - order-service
                  - cart-service
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
